# crusty-tts

./: Cargo.toml  README.md  input.txt  orchestration.cr  plan.md
ai-docs/: project-ideas.ai
ai-docs/planning/: arch-design-supplement.md  architecture-planning.md  generate_formatted.sh  implementation-plan.md  original-chat-formatted.md  supplementary architecture and code.md
crusty-cli/: Cargo.toml
crusty-cli/src/: main.rs
crusty-cli/tests/: integration.rs
crusty-core/: Cargo.toml
crusty-core/src/: lib.rs  orchestration.rs  pipeline.rs  plugin.rs  plugin_runner.rs  protocol.rs  registry.rs  validate.rs
crusty-core/tests/: integration.rs
crusty-daemon/: Cargo.toml
crusty-daemon/src/: lib.rs  main.rs  state.rs
docs/: how-to-implement-a-plugin.md  plugin-protocol-spec-v0.1.md
plugins/example-python/: plugin.toml  run.py
plugins/mp3-converter/: plugin.toml  run.sh
plugins/sample-tts/: plugin.toml  run.sh
