[package]
name = "crusty-core"
version = "0.1.0"
edition = "2021"
description = "Crusty-TTS orchestration engine: plugin registry, pipeline executor, protocol"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
